restructured passwd.js for better compression.

--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,6 @@
                 </li>
             </ul>
         </div>
-        <script src="js/passwd.js"></script>
+        <script defer src="js/passwd.js"></script>
     </body>
 </html>
