implementing caching strategies for the service-worker.

--- a/src/index.html
+++ b/src/index.html
@@ -22,17 +22,17 @@
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Cryptographically Strong Random Password Generator">
-        <meta name="twitter:image" content="https://passwd.sawmon-and-natalie.com/img/og-1200x1200.webp">
-        <meta name="twitter:image:alt" content="A key made of jigsaw puzzle pieces.">
+        <meta name="twitter:image" content="https://passwd.sawmon-and-natalie.com/img/og.webp">
+        <meta name="twitter:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://passwd.sawmon-and-natalie.com/">
         <meta property="og:title" content="Cryptographically Strong Random Password Generator">
-        <meta property="og:image" content="https://passwd.sawmon-and-natalie.com/img/og-1200x1200.png">
+        <meta property="og:image" content="https://passwd.sawmon-and-natalie.com/img/og.png">
         <meta property="og:image:type" content="image/png">
         <meta property="og:image:width" content="1200px">
         <meta property="og:image:height" content="1200px">
-        <meta property="og:image:alt" content="A key made of jigsaw puzzle pieces.">
+        <meta property="og:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <link rel="canonical" href="https://passwd.sawmon-and-natalie.com/">
 
