added icon meta tags and starting to configre travis.ci

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,48 @@
         <meta name="description" content="Cryptographically Strong Random Password Generator app that creates complex strong passowrd. The passwords are generated client side without sending any information to an external machine/server.">
         <meta name="keywords" content="Strong Password, Strong Password Generator, Cryptography, Password Generator, Online Password Generator, Random Password Generator, Secure Password Generator, Create Password, Generate Password, CLient-side Password Generator">
         
-        <link rel="icon" type="image/x-icon" size="16x16 24x24 32x32 48x48 64x64 72x72 96x96 128x128 256x256" href="img/icons/f.ico"/>
+        <!-- <link rel="icon" type="image/x-icon" size="16x16 24x24 32x32 48x48 64x64 72x72 96x96 128x128 256x256" href="/img/icons/f.ico"/> -->
+
+        <link rel="icon" type="image/x-icon" size="16x16 24x24 32x32 48x48" href="img/icons/favicon.ico"/>
+        <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/icons/apple-touch-icon-180x180-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon-180x180.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/icons/apple-touch-icon-152x152-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="152x152" href="img/icons/apple-touch-icon-152x152.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/icons/apple-touch-icon-144x144-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="144x144" href="img/icons/apple-touch-icon-144x144.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="img/icons/apple-touch-icon-120x120-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="120x120" href="img/icons/apple-touch-icon-120x120.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/icons/apple-touch-icon-114x114-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="114x114" href="img/icons/apple-touch-icon-114x114.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="img/icons/apple-touch-icon-76x76-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="76x76" href="img/icons/apple-touch-icon-76x76.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/icons/apple-touch-icon-72x72-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-touch-icon-72x72.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="img/icons/apple-touch-icon-60x60-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-touch-icon-60x60.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/icons/apple-touch-icon-57x57-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-touch-icon-57x57.png"/>
+        <link rel="apple-touch-icon-precomposed" sizes="180x180" href="img/icons/apple-touch-icon-precomposed.png"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png"/>
+        <link rel="icon" type="image/png" sizes="256x256" href="img/icons/android-chrome-256x256.png"/>
+        <link rel="icon" type="image/png" sizes="196x196" href="img/icons/favicon-196x196.png"/>
+        <link rel="icon" type="image/png" sizes="194x194" href="img/icons/favicon-194x194.png"/>
+        <link rel="icon" type="image/png" sizes="128x128" href="img/icons/favicon-128x128.png"/>
+        <link rel="icon" type="image/png" sizes="96x96" href="img/icons/android-chrome-96x96.png"/>
+        <link rel="icon" type="image/png" sizes="72x72" href="img/icons/android-chrome-72x72.png"/>
+        <link rel="icon" type="image/png" sizes="64x64" href="img/icons/favicon-64x64.png"/>
+        <link rel="icon" type="image/png" sizes="48x48" href="img/icons/favicon-48x48.png"/>
+        <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png"/>
+        <link rel="icon" type="image/png" sizes="24x24" href="img/icons/favicon-24x24.png"/>
+        <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png"/>
+        <meta name="apple-mobile-web-app-title" content="Password Generator"/>
+        <meta name="application-name" content="Password Generator"/>
+        <meta name="msapplication-TileColor" content="#d7e5fb"/>
+        <meta name="msapplication-TileImage" content="/static/icons/mstile-144x144.png"/>
+        <meta name="theme-color" content="#d7e5fb"/>
+        <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#1B3E77">
+        <link rel="manifest" href="manifest.json" />
+        <meta name="msapplication-config" content="/browserconfig.xml" />
         
         <meta name="author" content="Saw-mon &amp; Natalie">
         <meta name="creator" content="Saw-mon &amp; Natalie">
@@ -35,9 +76,9 @@
         <meta property="og:image:alt" content="Password Generator and a key made of jigsaw puzzle pieces on a background made of complex string of cryptographic letters.">
 
         <link rel="canonical" href="https://passwd.sawmon-and-natalie.com/">
-
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&text=%20%26%2B%2C-.ACDEGILNPRSTU%5B%5Dabcdeghiklmnoprstuvwxy&display=swap" rel="stylesheet" crossorigin>
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="manifest" href="/manifest.json">
     </head>
     <body>
         <div id="left">
